--- a/.github/workflows/frontend-build.yml
+++ b/.github/workflows/frontend-build.yml
@@ -1,10 +1,9 @@
 name: Frontend Build
 
 on:
-  push:
-    branches: [main, "**/front/**", feat/**]
   pull_request:
-    branches: [main]
+    paths:
+      - "frontend/**"
 
 jobs:
   build:
