Update API route destination in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/project_name/wsgi.py"
+      "dest": "backend/core/wsgi.py"
     },
     {
       "src": "/(.*)",
