--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "server/backend/core/wsgi.py", 
+            "src": "backend/core/wsgi.py", 
             "use": "@vercel/python"
         },
         {
@@ -13,6 +13,6 @@
     ],
     "routes": [
         { "src": "/api/(.*)", "dest": "/backend/core/wsgi.py" },
-        { "src": "/(.*)", "dest": "/client/$1" }
+        { "src": "/(.*)", "dest": "/frontend/$1" }
     ]
 }
